multi changes: Adding GUI